--- a/templates/home.html
+++ b/templates/home.html
@@ -12,7 +12,7 @@
 
                     <a class="navbar-brand" href="{{ url_for('index') }}">
                         <img id="ct-js-logo"
-                             src="{{ url_for('static',filename="image/logo-gray.png") }}"
+                             src="{{ url_for('static',filename="image/logo.png") }}"
                              alt="FISHtank"
                              width="49px">
                     </a>
