--- a/templates/messages_box.html
+++ b/templates/messages_box.html
@@ -21,7 +21,8 @@
 
 {% endfor %}
 
- </div>
+<div>
+    aaaaaaaaaaaaaaaaaaaaa
 <form action="{{ url_for("messages_box") }}" class="message_form" method="post" enctype="multipart/form-data">
         {{ form.hidden_tag() }}
 <div class="input-group">
@@ -41,6 +42,9 @@
       </span>
     </div><!-- /input-group -->
 </form>
+</div>
+</div>
+
 <script>
 
 $(document).ready(function () {
