--- a/static/style/style.css
+++ b/static/style/style.css
@@ -4140,6 +4140,7 @@ a.hoover-blue:hover{
     overflow: scroll;
     overflow-y:auto;
     overflow-x:hidden;
+
 }
 
 .ct-messageMobile{
@@ -4149,9 +4150,8 @@ a.hoover-blue:hover{
     right: 0;
     bottom: 0;
     width: 100%;
-    max-height: 100%;
+    height: 100%;
     z-index: 1000;
-
 
 }
 .ct-messageMobile{
@@ -4159,10 +4159,18 @@ a.hoover-blue:hover{
     color: #ffffff;
     display: none;
 
+
 }
 @media (max-width: 769px) {
      #messages_box{
         display: none;
+    }
+    #message-container{
+            margin-bottom: 23%;
+
+    }
+    .message_form{
+        padding-left: 10%;
     }
 }
 
@@ -4189,7 +4197,28 @@ a.hoover-blue:hover{
     height: 70px
 }
 .ct-messageNavbarMobile--header img{
-    margin-left: 10%;
-    max-height: 100%;
+    margin-left: 15%;
+    max-height: 90%;
 
+}
+.ct-messageNavbarMobile--header i{
+    margin-left: 10%;
+
+}
+.messages_box_mobile{
+     overflow: scroll;
+
+    position: absolute;
+    top: 75px;
+    right: 5%;
+    bottom: 0;
+    width: 100%;
+    max-height: 100%;
+    z-index: 2000;
+}
+.messages_box_mobile li.ct-u-floatRight {
+    padding-left: 30px;
+}
+.messages_box_mobile li.ct-u-floatLeft {
+    padding-left: 30px;
 }
