--- a/templates/base.html
+++ b/templates/base.html
@@ -126,6 +126,15 @@
         <li><a href="{{ url_for('last_posts') }}"><i class="fa fa-newspaper-o"></i> БЛОГ</a></li>
 
         {% if current_user.is_authenticated %}
+            {% if g.new_notification %}
+                <li><a href="{{ url_for('user_notification', user_id = current_user.id) }}"><i class="fa fa-bell"></i> УВЕДОМЛЕНИЯ<i class="mesage-logo"></i></a></li>
+        {% else %}
+                           <li><a href="{{ url_for('user_notification', user_id = current_user.id) }}"><i class="fa fa-bell"></i> УВЕДОМЛЕНИЯ</a></li>
+
+        {% endif %}
+                <li role="presentation" class="divider"></li>
+
+
             <li><a href="{{ url_for('add_post') }}"><i class="fa fa-pencil-square"></i> СОЗДАТЬ ПОСТ</a></li>
             <li><a href="{{ url_for('add_product') }}"><i class="fa fa-pencil-square"></i> ДОБАВИТЬ ПРОДУКТ</a></li>
         {% endif %}
@@ -138,14 +147,22 @@
         <img id="ct-js-logo" src="{{ url_for('static',filename="image/logo.png") }}" alt="FISHtank" , width=49px/>
     </a>
 
-    <button type="button" id="listener" class="navbar-toggle">
+    <button type="button" id="listener" class="navbar-toggle ">
         <span class="sr-only">Toggle navigation</span>
+        {% if g.new_notification %}
+        <span class="icon-bar mesage-logo"></span>
+            {% else %}
+            <span class="icon-bar"></span>
+
+        {% endif %}
+
+
         <span class="icon-bar"></span>
-        <span class="icon-bar"></span>
-        <span class="icon-bar"></span>
+        <span class="icon-bar "></span>
 
 
     </button>
+
 
 </div>
 
@@ -197,8 +214,33 @@
                                     {% endif %}
                                 </a>
                             </li>
-                            <li>
-                                <a href="{{ url_for('user', username = current_user.username) }}">{{ current_user.username }}</a>
+                            <li class="dropdown" role="presentation">
+                            {% if g.new_notification %}
+                                <a class="dropdown-toggle mesage-logo" data-toggle="dropdown" href="#" role="button" aria-expanded="true">
+                                {{ current_user.username }} <span class="caret"></span>
+                                     </a>
+                                {% else %}
+                                                                    <a class="dropdown-toggle" data-toggle="dropdown" href="#" role="button" aria-expanded="true">
+                                {{ current_user.username }} <span class="caret"></span>
+                                     </a>
+                                {% endif %}
+
+                                    <ul class="dropdown-menu ct-dropdown-menu">
+                                                            <li>
+                                                                <ul class="list-unstyled">
+                                                                    <li><a href="{{ url_for('user', username = current_user.username) }}">Профиль</a></li>
+                                                                    {% if g.new_notification %}
+
+
+                                                                        <li><a href="{{ url_for('user_notification', user_id = current_user.id) }}" class="mesage-logo">Уведомления</a></li>
+                                                                    {% else %}
+                                                                        <li><a href="{{ url_for('user_notification', user_id = current_user.id) }}">Уведомления</a></li>
+
+                                                                    {%  endif %}
+
+                                                                </ul>
+                                                            </li>
+                                      </ul>
                             </li>
                             <li>
                                 <a href="{{ url_for('dialogs', user_id = current_user.id) }}">
