--- a/templates/dialogs.html
+++ b/templates/dialogs.html
@@ -67,8 +67,8 @@
 
                         </div>
 
-            <div class="col-md-8">
-                <div id="messages_box">
+            <div class="col-md-8 ct-u-positionRelative">
+                <div id="messages_box" class="ct-u-marginBottom40">
 
                 </div>
 
@@ -82,7 +82,6 @@
         $(".one-dialog").on("click", function (event) {
                         event.preventDefault();
 
-            console.log(3333);
             var dialog_id = $(this).attr("id");
             if ($(window).width() <= 768) {
                 $(".ct-messageMobile").show();
@@ -106,7 +105,6 @@
         });
         $(".ct-messageNavbarMobile i").on("click", function () {
             $(".one-dialog").on('click');
-            console.log(11111111111);
             $(".ct-messageMobile").fadeToggle();
             $(".ct-navbarMobile.ct-navbarMobile--header").show();
 
